# mitmproxy-mcp

./: CLAUDE.md  README.md  pyproject.toml
scripts/: ap-setup.sh  ap-toggle.sh
src/mitm_mcp/: __init__.py  __main__.py  addon.py  safety.py  server.py  session.py  tools.py
src/mitm_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_addon.py  test_safety.py  test_session.py  test_tools.py
